change desc and icon

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
                         <h1>Membantu anda dengan meng<strong>iklan</strong>kan bisnis anda
                         </h1>
-                        <p>Diklanin adalah tempat bagi usaha anda untuk disebarluaskan</p>
-                        <a href="#features" class="main-button-slider">Discover More</a>
+                        <p>Tempat bagi usaha anda disebarluaskan.</p>
+                        <a href="#features" class="main-button-slider">Lihat Detail</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@ https://templatemo.com/tm-535-softy-pinko
                             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
                             <div class="features-small-item">
                                 <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
+                                    <i><img src="assets/images/featured-item-02.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Terjangkau</h5>
                                 <p>Harga yang tergolong terjangkau untuk memasang iklan.</p>
@@ -127,7 +127,7 @@ https://templatemo.com/tm-535-softy-pinko
                             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
                             <div class="features-small-item">
                                 <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
+                                    <i><img src="assets/images/featured-item-03.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Selamanya</h5>
                                 <p>Tidak terhapus dan seterusnya di sosial media kami.</p>
@@ -178,9 +178,9 @@ https://templatemo.com/tm-535-softy-pinko
                         <h2 class="section-title">Kami dapat membantu Anda mengembangkan bisnis Anda</h2>
                     </div>
                     <div class="left-text">
-                        <p>Aenean pretium, ipsum et porttitor auctor, metus ipsum iaculis nisi, a bibendum lectus libero
-                            vitae urna. Sed id leo eu dolor luctus congue sed eget ipsum. Nunc nec luctus libero. Etiam
-                            quis dolor elit.</p>
+                        <p>Diklanin menawarkan jasa pengiklanan berbagai produk usaha. Anda dapat mengandalkan kami
+                            dalam mengembangkan bisnis anda melalui iklan. Dengan begitu anda dapat lebih fokus pada
+                            bisnis anda, sementara kami membantu dalam mengiklankan produk anda.</p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
@@ -566,8 +566,10 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="social">
-                        <li><a href="#"><img src="assets/images/tiktok.png" alt=""></a></li>
-                        <li><a href="#"><img src="assets/images/ig.png" alt=""></a></li>
+                        <li><a href="https://www.tiktok.com/@diklanin6?_t=8fq7ZWALb9D&_r=1" target="_blank"><img
+                                    src="assets/images/tiktok.png" alt=""></a></li>
+                        <li><a href="https://www.instagram.com/diklanin.aja" target="_blank"><img
+                                    src="assets/images/ig.png" alt=""></a></li>
                         <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-rss"></i></a></li>
                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
