--- a/www/index.html
+++ b/www/index.html
@@ -10,18 +10,18 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
     <title>Diklanin</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <!--
 SOFTY PINKO
 https://templatemo.com/tm-535-softy-pinko
 -->
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 
-    <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css">
+    <link rel="stylesheet" href="css/templatemo-softy-pinko.css">
 
 </head>
 
@@ -46,7 +46,7 @@ https://templatemo.com/tm-535-softy-pinko
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="#" class="logo">
-                            <img src="assets/images/logo.png" alt="Softy Pinko" />
+                            <img src="images/logo.png" alt="Softy Pinko" />
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
@@ -101,7 +101,7 @@ https://templatemo.com/tm-535-softy-pinko
                             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s">
                             <div class="features-small-item">
                                 <div class="icon">
-                                    <i><img src="assets/images/featured-item-01.png" alt=""></i>
+                                    <i><img src="images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Mudah</h5>
                                 <p>Hanya dengan beberapa tahapan iklan sudah terbit.</p>
@@ -114,7 +114,7 @@ https://templatemo.com/tm-535-softy-pinko
                             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
                             <div class="features-small-item">
                                 <div class="icon">
-                                    <i><img src="assets/images/featured-item-02.png" alt=""></i>
+                                    <i><img src="images/featured-item-02.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Terjangkau</h5>
                                 <p>Harga yang tergolong terjangkau untuk memasang iklan.</p>
@@ -127,7 +127,7 @@ https://templatemo.com/tm-535-softy-pinko
                             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
                             <div class="features-small-item">
                                 <div class="icon">
-                                    <i><img src="assets/images/featured-item-03.png" alt=""></i>
+                                    <i><img src="images/featured-item-03.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Selamanya</h5>
                                 <p>Tidak terhapus dan seterusnya di sosial media kami.</p>
@@ -147,7 +147,7 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 align-self-center"
                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="assets/images/left-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="images/left-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
                 </div>
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
@@ -186,7 +186,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-1"></div>
                 <div class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big"
                     data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="assets/images/right-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="images/right-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
                 </div>
             </div>
         </div>
@@ -210,42 +210,42 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="row step">
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <i><img src="images/work-process-item-01.png" alt=""></i>
                             <strong>Hubungi</strong>
                             <span>Hubungi kami untuk informasi lebih lanjut.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <i><img src="images/work-process-item-01.png" alt=""></i>
                             <strong>Diskusi</strong>
                             <span>Diskusikan pilihan iklan yang tepat.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <i><img src="images/work-process-item-01.png" alt=""></i>
                             <strong>Posting</strong>
                             <span>Hingga akhirnya, iklan anda kami posting.</span>
                         </a>
                     </div>
                     <!-- <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <i><img src="images/work-process-item-01.png" alt=""></i>
                             <strong>Revise</strong>
                             <span>Godard pabst prism fam cliche.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <i><img src="images/work-process-item-01.png" alt=""></i>
                             <strong>Approve</strong>
                             <span>Godard pabst prism fam cliche.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
-                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <i><img src="images/work-process-item-01.png" alt=""></i>
                             <strong>Launch</strong>
                             <span>Godard pabst prism fam cliche.</span>
                         </a>
@@ -280,7 +280,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="team-item">
                         <div class="team-content">
-                            <i><img src="assets/images/testimonial-icon.png" alt=""></i>
+                            <i><img src="images/testimonial-icon.png" alt=""></i>
                             <p>Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci.
                                 Maecenas a finibus odio.</p>
                             <div class="user-image">
@@ -299,7 +299,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="team-item">
                         <div class="team-content">
-                            <i><img src="assets/images/testimonial-icon.png" alt=""></i>
+                            <i><img src="images/testimonial-icon.png" alt=""></i>
                             <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae,
                                 placerat nibh. Cras maximus venenatis molestie.</p>
                             <div class="user-image">
@@ -318,7 +318,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="team-item">
                         <div class="team-content">
-                            <i><img src="assets/images/testimonial-icon.png" alt=""></i>
+                            <i><img src="images/testimonial-icon.png" alt=""></i>
                             <p>Quisque diam odio, maximus ac consectetur eu, auctor non lorem. Cras quis est non ante
                                 ultrices molestie. Ut vehicula et diam at aliquam.</p>
                             <div class="user-image">
@@ -506,7 +506,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post-thumb">
                         <div class="img">
-                            <img src="assets/images/blog-item-01.png" alt="">
+                            <img src="images/blog-item-01.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h3>
@@ -523,7 +523,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post-thumb">
                         <div class="img">
-                            <img src="assets/images/blog-item-02.png" alt="">
+                            <img src="images/blog-item-02.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h3>
@@ -540,7 +540,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post-thumb">
                         <div class="img">
-                            <img src="assets/images/blog-item-03.png" alt="">
+                            <img src="images/blog-item-03.png" alt="">
                         </div>
                         <div class="blog-content">
                             <h3>
@@ -567,9 +567,9 @@ https://templatemo.com/tm-535-softy-pinko
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="social">
                         <li><a href="https://www.tiktok.com/@diklanin6?_t=8fq7ZWALb9D&_r=1" target="_blank"><img
-                                    src="assets/images/tiktok.png" alt=""></a></li>
-                        <li><a href="https://www.instagram.com/diklanin.aja" target="_blank"><img
-                                    src="assets/images/ig.png" alt=""></a></li>
+                                    src="images/tiktok.png" alt=""></a></li>
+                        <li><a href="https://www.instagram.com/diklanin.aja" target="_blank"><img src="images/ig.png"
+                                    alt=""></a></li>
                         <!-- <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="#"><i class="fa fa-rss"></i></a></li>
                         <li><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
@@ -585,20 +585,20 @@ https://templatemo.com/tm-535-softy-pinko
     </footer>
 
     <!-- jQuery -->
-    <script src="assets/js/jquery-2.1.0.min.js"></script>
+    <script src="js/jquery-2.1.0.min.js"></script>
 
     <!-- Bootstrap -->
-    <script src="assets/js/popper.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugins -->
-    <script src="assets/js/scrollreveal.min.js"></script>
-    <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/imgfix.min.js"></script>
+    <script src="js/scrollreveal.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.min.js"></script>
+    <script src="js/imgfix.min.js"></script>
 
     <!-- Global Init -->
-    <script src="assets/js/custom.js"></script>
+    <script src="js/custom.js"></script>
 
 </body>
 
