--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Diklanin">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Diklanin</title>
+    <title>Diklanin - Jasa Iklan Produk</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <!--
 SOFTY PINKO
