--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Diklanin - Jasa Iklan Produk">
+    <meta name="description" content="Diklanin - Tempatnya Jasa Iklan Produk">
     <meta name="author" content="Diklanin">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
