--- a/www/index.html
+++ b/www/index.html
@@ -336,16 +336,21 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="images/testimonial-icon.png" alt="" /></i>
                 <p>
-                  Integer molestie aliquam gravida. Nullam nec arcu finibus,
-                  imperdiet nulla vitae, placerat nibh. Cras maximus venenatis
-                  molestie.
+                  Diklanin mantap, sangat membantu saya dalam mempromosikan
+                  bisnis jasa yang sedang lakukan saat ini. Mereka selalu
+                  memberikan yang terbaik sehingga saya sangat puas dengan hasil
+                  mereka(Diiklanin) berikan.
                 </p>
                 <div class="user-image">
-                  <img src="http://placehold.it/60x60" alt="" />
+                  <img
+                    src="images/bywizard.png"
+                    alt="logo brand"
+                    class="brandlogotesti"
+                  />
                 </div>
                 <div class="team-info">
-                  <h3 class="user-name">Kelvin Wood</h3>
-                  <span>Digital Marketer</span>
+                  <h3 class="user-name">Dimas Yuda</h3>
+                  <span>Head leader of ByteWizard</span>
                 </div>
               </div>
             </div>
